# school

./: .gitattributes  .gitmodules
1st/Computational_Thinking/1JC3-Assign4/: 1JC3-Assign4.cabal  package.yaml  shell.nix  stack.yaml
1st/Development_Basics/Assignment1/: Q3.csv
1st/Development_Basics/Assignment2/: raceStats  raceStats.c  temps  temps.c
1st/Development_Basics/Assignment3/: housing.c  lettercounter  lettercounter.c
1st/Development_Basics/Assignment4:5/: housing  housing.c
1st/Development_Basics/Assignment9:10/: dotprod
2nd/Computer_Architecture/Assignment1/: Task3  Task3.c  Task4  Task4.c
2nd/Computer_Architecture/Assignment3/: axor.s  info  int_out.c  main  main.c  problem1.s  xor  xor.c
2nd/Computer_Architecture/Assignment4/: storage  storage.c  storage2  storage2.c
2nd/Computer_Architecture/Assignment5/: buffers.c  test_in.txt
2nd/Data_Structures_And_Algorithms/A1_habinskw/: DLL.java  DLLNode.java  SLL.java  SLLNode.java  Stack.java  parenthesisMatching.java  selectionSort.java
2nd/Data_Structures_And_Algorithms/A2_habinskw/: TNode.java  TernaryTree.java
2nd/Databases/Assignment3/: SQL.txt
2nd/Software_Development/Assignment0/: Square.java
3rd/Programming_Principals/Assignments/Assignment1/: a1.cabal  hie.yaml
3rd/Programming_Principals/Assignments/Assignment1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
3rd/Programming_Principals/Assignments/Assignment1/src/: A1_habinskw.hs
3rd/Programming_Principals/Assignments/Assignment1/test/: Main.hs
(+267 files in other folders)
